--- a/v2/main.css
+++ b/v2/main.css
@@ -86,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     font-family: Helvetica, Arial, sans-serif;
+    --default-line-height: 1.5;
 }
 
 div#header {
@@ -162,55 +163,6 @@ div#header {
         }
     }
 
-    span#theme-colour {
-        width: 38px;
-        height: 38px;
-        margin: 30px 20px;
-        margin-left: 0px;
-        border-radius: 50%;
-        border: 1px solid black;
-        background-color: var(--button-background);
-        float: right;
-        cursor: pointer;
-    }
-
-    div#colour-dropdown {
-        position: fixed;
-        top: 100px;
-        right: 0px;
-        display: none;
-        padding: 10px;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 180px;
-        height: 180px;
-        background-color: white;
-        animation: fadeIn 1000ms;
-
-        * {
-            display: block;
-            width: 38px;
-            height: 38px;
-            border-radius: 50%;
-            border: 1px solid black;
-            background-color: var(--button-background);
-            cursor: pointer;
-            margin: 10px;
-            flex-basis: 38px;
-        }
-    }
-
-    div#colour-dropdown.show {
-        display: flex;
-    }
-
-    span#theme-colour.random, span.colour-option.random {
-        background-image: url("./icons/random.svg");
-        background-size: 16px;
-        background-repeat: no-repeat;
-        background-position: center center;
-    }
-
     select#version-select {
         background-color: white;
         float: right;
@@ -220,6 +172,25 @@ div#header {
         font-size: 20px;
         width: 60px;
         margin: 30px 20px;
+    }
+
+    a#settings-button {
+        display: block;
+        float: right;
+        height: 38px;
+        width: 38px;
+        border: 1px solid black;
+        border-radius: 20px;
+        margin: 30px 0px;
+        background-image: url("./icons/settings.svg");
+        background-size: 16px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        transition: transform 0.25s;
+    }
+
+    a#settings-button:hover {
+        transform: rotate(-120deg);
     }
 }
 
@@ -469,8 +440,70 @@ div#homepage-carousel {
     }
 }
 
+div#colour-picker {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    span.colour-option {
+        display: inline-block;
+        width: 38px;
+        height: 38px;
+        border-radius: 50%;
+        border: 1px solid black;
+        background-color: var(--button-background);
+        cursor: pointer;
+        margin: 10px;
+        flex-basis: 38px;
+    }
+    
+    span.colour-option.random {
+        background-image: url("./icons/random.svg");
+        background-size: 16px;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    span.colour-option.selected {
+        width: 34px;
+        height: 34px;
+        border: 3px solid black; 
+        flex-basis: 34px;
+    }
+}
+
+div#line-spacing {
+    width: 50%;
+    min-width: 500px;
+    max-width: 100%;
+
+    input#spacing-slider {
+        appearance: none;
+        width: 100%;
+        height: 15px;
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        transition: opacity .2s;
+        border-radius: 7.5px;
+    }
+
+    input#spacing-slider:hover {
+        opacity: 1;
+    }
+
+    input#spacing-slider::-webkit-slider-thumb {
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: var(--button-bg-accent);
+        cursor: pointer;
+    }
+}
+
 p {
-    line-height: 1.5;
+    line-height: var(--default-line-height);
 }
 
 a {
