--- a/v2/main.css
+++ b/v2/main.css
@@ -323,8 +323,8 @@ div#page {
     position: absolute;
     top: 100px;
     left: 0px;
-    width: calc(100% - 16px);
-    margin: 8px;
+    width: calc(100% - 32px);
+    margin: 16px;
 }
 
 div.feedback-page {
@@ -512,6 +512,8 @@ a {
 img {
     max-height: 75vh;
     max-width: 75vw;
+    width: auto;
+    height: auto;
 }
 
 img:not(.icon):not(#logo):not(.no-zoom) {
