--- a/v2/main.css
+++ b/v2/main.css
@@ -87,6 +87,10 @@ h1, h2, h3, h4, h5, h6 {
 body {
     font-family: Helvetica, Arial, sans-serif;
     --default-line-height: 1.5;
+    background: linear-gradient(to bottom, #ffffff 0%, #f0f0f0 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 div#header {
@@ -284,13 +288,14 @@ div#content {
         display: flex;
         box-sizing: border-box;
         width: calc(50% - 20px);
-        border-radius: 10px;
-        border: 3px solid;
+        border-radius: 12px;
+        border: 2px solid;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         margin: 10px;
         text-align: center;
         margin-left: auto;
         margin-right: auto;
-        transition: background-color 200ms;
+        transition: transform 0.2s ease, background-color 0.2s ease;
 
         a.section-link {
             width: 100%;
@@ -308,6 +313,8 @@ div#content {
 
     div.section-flexbox:not(.disabled):hover {
         background-color: #eeeeee;
+        transform: translateY(-4px);
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     div.section-flexbox.disabled {
@@ -343,7 +350,7 @@ div#footer {
     box-shadow: 0px -10px 10px 5px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     a#prev-link, a#next-link {
@@ -364,6 +371,10 @@ div#footer {
     a#next-link {
         right: 5px;
     }
+}
+
+div#footer:has(a#prev-link) {
+    justify-content: space-between;
 }
 
 div#homepage-carousel {
